--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,23 @@
     "i18n-ally.sortKeys": true,
     "i18n-ally.keepFulfilled": true,
     "i18n-ally.sourceLanguage": "zh", // 根据此语言文件翻译其他语言文件的变量和内容
-    "i18n-ally.displayLanguage": "en", // 显示语言
+    "i18n-ally.displayLanguage": "en",
+    "cSpell.words": [
+        "chakra",
+        "dqbd",
+        "echarts",
+        "hyperdown",
+        "immer",
+        "katex",
+        "nextjs",
+        "nprogress",
+        "openai",
+        "papaparse",
+        "reactflow",
+        "rehype",
+        "svgr",
+        "tanstack",
+        "tiktoken",
+        "zustand"
+    ], // 显示语言
 }
