feat: 功能优-二开

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,18 +16,35 @@
         "chakra",
         "dqbd",
         "echarts",
+        "equb",
+        "fastapi",
+        "fasw",
+        "fesw",
+        "fljhzy",
+        "fqsw",
         "hyperdown",
+        "iejcou",
         "immer",
         "katex",
         "nextjs",
+        "nlfwkc",
         "nprogress",
+        "numpy",
         "openai",
         "papaparse",
+        "pydantic",
         "reactflow",
         "rehype",
+        "remuj",
+        "scikit",
+        "Sealos",
+        "starlette",
         "svgr",
         "tanstack",
         "tiktoken",
+        "uvicorn",
+        "videobgpc",
+        "videobgphone",
         "zustand"
     ], // 显示语言
 }
